src/parser/parser.ts
// @ts-nocheck
import { ParserOptions as IParseOptions } from "peggy";

// Generated by peggy v. 1.2.0 (ts-pegjs plugin v. 1.1.1 )
//
// https://peggyjs.org/   https://github.com/metadevpro/ts-pegjs

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Object as any).setPrototypeOf === "function") {
      (Object as any).setPrototypeOf(this, SyntaxError.prototype);
    } else {
      (this as any).__proto__ = SyntaxError.prototype;
    }
    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { Start: peg$parseStart };
  let peg$startRuleFunction: () => any = peg$parseStart;

  const peg$c0 = "and";
  const peg$c1 = peg$literalExpectation("and", true);
  const peg$c2 = "or";
  const peg$c3 = peg$literalExpectation("or", true);
  const peg$c4 = function(items: any, last: any): any {
      items.reverse();

      return items.reduce((condition, right) => {
        const [operation,,type] = right
        return {
          type: type.toLowerCase(),
          tests: [operation, condition]
        };
      }, last);
    };
  const peg$c5 = "(";
  const peg$c6 = peg$literalExpectation("(", false);
  const peg$c7 = ")";
  const peg$c8 = peg$literalExpectation(")", false);
  const peg$c9 = function(sequence: any): any { return sequence; };
  const peg$c10 = peg$otherExpectation("test");
  const peg$c11 = peg$otherExpectation("equal");
  const peg$c12 = "neq";
  const peg$c13 = peg$literalExpectation("neq", true);
  const peg$c14 = "eq";
  const peg$c15 = peg$literalExpectation("eq", true);
  const peg$c16 = function(key: any, op: any, value: any): any {
  	return getArgs({
        type: 'equal',
        key: key,
        value: value
      }, comp(op, "neq"));
    };
  const peg$c17 = "gte";
  const peg$c18 = peg$literalExpectation("gte", true);
  const peg$c19 = "gt";
  const peg$c20 = peg$literalExpectation("gt", true);
  const peg$c21 = "lte";
  const peg$c22 = peg$literalExpectation("lte", true);
  const peg$c23 = "lt";
  const peg$c24 = peg$literalExpectation("lt", true);
  const peg$c25 = function(key: any, op: any, value: any): any {
      return {
        type: op.toLowerCase(),
        key: key,
        value: value
      }
    };
  const peg$c26 = peg$otherExpectation("between");
  const peg$c27 = "not";
  const peg$c28 = peg$literalExpectation("not", true);
  const peg$c29 = "between";
  const peg$c30 = peg$literalExpectation("between", false);
  const peg$c31 = ",";
  const peg$c32 = peg$literalExpectation(",", false);
  const peg$c33 = function(key: any, not: any, values: any): any {
      return getArgs({
        type: "between",
        key: key,
        values: [values[0], values[4]]
      }, !!not);
    };
  const peg$c34 = peg$otherExpectation("any");
  const peg$c35 = "any";
  const peg$c36 = peg$literalExpectation("any", true);
  const peg$c37 = "in";
  const peg$c38 = peg$literalExpectation("in", true);
  const peg$c39 = function(key: any, not: any, head: any, tail: any): any {
      return getArgs({
        type: 'any',
        key: key,
        values: getAny(head, tail)
      }, !!not);
    };
  const peg$c40 = peg$otherExpectation("matches");
  const peg$c41 = "i";
  const peg$c42 = peg$literalExpectation("i", true);
  const peg$c43 = "matches";
  const peg$c44 = peg$literalExpectation("matches", true);
  const peg$c45 = function(key: any, not: any, type: any, value: any): any {
      return getArgs({
        type: type.join(""),
        key: key,
        value: value
      }, !!not)
    };
  const peg$c46 = peg$otherExpectation("empty");
  const peg$c47 = "is";
  const peg$c48 = peg$literalExpectation("is", true);
  const peg$c49 = "empty";
  const peg$c50 = peg$literalExpectation("empty", true);
  const peg$c51 = function(key: any, not: any): any {
      return getArgs({
        type: 'empty',
        key: key
      }, !!not);
    };
  const peg$c52 = peg$otherExpectation("key");
  const peg$c53 = function(key: any): any {
      return key
    };
  const peg$c54 = peg$otherExpectation("value");
  const peg$c55 = function(key: any): any {
      return { var: key }
    };
  const peg$c56 = peg$otherExpectation("boolean");
  const peg$c57 = "true";
  const peg$c58 = peg$literalExpectation("true", false);
  const peg$c59 = function(): any { return true; };
  const peg$c60 = "false";
  const peg$c61 = peg$literalExpectation("false", false);
  const peg$c62 = function(): any { return false; };
  const peg$c63 = peg$otherExpectation("string");
  const peg$c64 = function(chars: any): any {
      return chars.join('')
    };
  const peg$c65 = peg$otherExpectation("float");
  const peg$c66 = /^[0-9]/;
  const peg$c67 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c68 = ".";
  const peg$c69 = peg$literalExpectation(".", false);
  const peg$c70 = function(): any {
      return Number(text())
    };
  const peg$c71 = peg$otherExpectation("integer");
  const peg$c72 = peg$otherExpectation("braced");
  const peg$c73 = "{";
  const peg$c74 = peg$literalExpectation("{", false);
  const peg$c75 = /^[^W}]/;
  const peg$c76 = peg$classExpectation(["W", "}"], true, false);
  const peg$c77 = "}";
  const peg$c78 = peg$literalExpectation("}", false);
  const peg$c79 = function(chars: any): any {
      return chars.join("");
    };
  const peg$c80 = peg$otherExpectation("char");
  const peg$c81 = "\"";
  const peg$c82 = peg$literalExpectation("\"", false);
  const peg$c83 = "\\";
  const peg$c84 = peg$literalExpectation("\\", false);
  const peg$c85 = "n";
  const peg$c86 = peg$literalExpectation("n", false);
  const peg$c87 = /^[^W\\"\n]/;
  const peg$c88 = peg$classExpectation(["W", "\\", "\"", "\n"], true, false);
  const peg$c89 = peg$otherExpectation("whitespace");
  const peg$c90 = /^[\n\t ]/;
  const peg$c91 = peg$classExpectation(["\n", "\t", " "], false, false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseStart(): any {
    let s0;

    s0 = peg$parseSequence();

    return s0;
  }

  function peg$parseSequence(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parseOperation();
    if (s3 as any !== peg$FAILED) {
      s4 = [];
      s5 = peg$parse_();
      if (s5 as any !== peg$FAILED) {
        while (s5 as any !== peg$FAILED) {
          s4.push(s5);
          s5 = peg$parse_();
        }
      } else {
        s4 = peg$FAILED;
      }
      if (s4 as any !== peg$FAILED) {
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c0) {
          s5 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s5 as any === peg$FAILED) {
          if (input.substr(peg$currPos, 2).toLowerCase() === peg$c2) {
            s5 = input.substr(peg$currPos, 2);
            peg$currPos += 2;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
        }
        if (s5 as any !== peg$FAILED) {
          s6 = [];
          s7 = peg$parse_();
          if (s7 as any !== peg$FAILED) {
            while (s7 as any !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parse_();
            }
          } else {
            s6 = peg$FAILED;
          }
          if (s6 as any !== peg$FAILED) {
            s3 = [s3, s4, s5, s6];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 as any !== peg$FAILED) {
      while (s2 as any !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parseOperation();
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          if (s5 as any !== peg$FAILED) {
            while (s5 as any !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 as any !== peg$FAILED) {
            if (input.substr(peg$currPos, 3).toLowerCase() === peg$c0) {
              s5 = input.substr(peg$currPos, 3);
              peg$currPos += 3;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c1); }
            }
            if (s5 as any === peg$FAILED) {
              if (input.substr(peg$currPos, 2).toLowerCase() === peg$c2) {
                s5 = input.substr(peg$currPos, 2);
                peg$currPos += 2;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
            }
            if (s5 as any !== peg$FAILED) {
              s6 = [];
              s7 = peg$parse_();
              if (s7 as any !== peg$FAILED) {
                while (s7 as any !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parse_();
                }
              } else {
                s6 = peg$FAILED;
              }
              if (s6 as any !== peg$FAILED) {
                s3 = [s3, s4, s5, s6];
                s2 = s3;
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parseOperation();
      if (s2 as any !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 as any === peg$FAILED) {
      s0 = peg$parseTest();
    }

    return s0;
  }

  function peg$parseOperation(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      while (s3 as any !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parseSequence();
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          while (s5 as any !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 as any !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 41) {
              s5 = peg$c7;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s5 as any !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c9(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 as any === peg$FAILED) {
      s0 = peg$parseTest();
    }

    return s0;
  }

  function peg$parseTest(): any {
    let s0, s1;

    peg$silentFails++;
    s0 = peg$parseEqual();
    if (s0 as any === peg$FAILED) {
      s0 = peg$parseRange();
      if (s0 as any === peg$FAILED) {
        s0 = peg$parseBetween();
        if (s0 as any === peg$FAILED) {
          s0 = peg$parseAny();
          if (s0 as any === peg$FAILED) {
            s0 = peg$parseMatches();
            if (s0 as any === peg$FAILED) {
              s0 = peg$parseEmpty();
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 as any === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }

    return s0;
  }

  function peg$parseEqual(): any {
    let s0, s1, s2, s3, s4, s5;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseKey();
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      if (s3 as any !== peg$FAILED) {
        while (s3 as any !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parse_();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 as any !== peg$FAILED) {
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c12) {
          s3 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s3 as any === peg$FAILED) {
          if (input.substr(peg$currPos, 2).toLowerCase() === peg$c14) {
            s3 = input.substr(peg$currPos, 2);
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c15); }
          }
        }
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          if (s5 as any !== peg$FAILED) {
            while (s5 as any !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parseValue();
            if (s5 as any !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c16(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 as any === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }

    return s0;
  }

  function peg$parseRange(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseKey();
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      if (s3 as any !== peg$FAILED) {
        while (s3 as any !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parse_();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 as any !== peg$FAILED) {
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c17) {
          s3 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c18); }
        }
        if (s3 as any === peg$FAILED) {
          if (input.substr(peg$currPos, 2).toLowerCase() === peg$c19) {
            s3 = input.substr(peg$currPos, 2);
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c20); }
          }
          if (s3 as any === peg$FAILED) {
            if (input.substr(peg$currPos, 3).toLowerCase() === peg$c21) {
              s3 = input.substr(peg$currPos, 3);
              peg$currPos += 3;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
            if (s3 as any === peg$FAILED) {
              if (input.substr(peg$currPos, 2).toLowerCase() === peg$c23) {
                s3 = input.substr(peg$currPos, 2);
                peg$currPos += 2;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c24); }
              }
            }
          }
        }
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          if (s5 as any !== peg$FAILED) {
            while (s5 as any !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parseValue();
            if (s5 as any !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c25(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBetween(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseKey();
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      if (s3 as any !== peg$FAILED) {
        while (s3 as any !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parse_();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$currPos;
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c27) {
          s4 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c28); }
        }
        if (s4 as any !== peg$FAILED) {
          s5 = [];
          s6 = peg$parse_();
          while (s6 as any !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parse_();
          }
          if (s5 as any !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 as any === peg$FAILED) {
          s3 = null;
        }
        if (s3 as any !== peg$FAILED) {
          if (input.substr(peg$currPos, 7) === peg$c29) {
            s4 = peg$c29;
            peg$currPos += 7;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c30); }
          }
          if (s4 as any !== peg$FAILED) {
            s5 = [];
            s6 = peg$parse_();
            if (s6 as any !== peg$FAILED) {
              while (s6 as any !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parse_();
              }
            } else {
              s5 = peg$FAILED;
            }
            if (s5 as any !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 40) {
                s6 = peg$c5;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
              if (s6 as any !== peg$FAILED) {
                s7 = [];
                s8 = peg$parse_();
                while (s8 as any !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parse_();
                }
                if (s7 as any !== peg$FAILED) {
                  s8 = peg$currPos;
                  s9 = peg$parseValue();
                  if (s9 as any !== peg$FAILED) {
                    s10 = [];
                    s11 = peg$parse_();
                    while (s11 as any !== peg$FAILED) {
                      s10.push(s11);
                      s11 = peg$parse_();
                    }
                    if (s10 as any !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 44) {
                        s11 = peg$c31;
                        peg$currPos++;
                      } else {
                        s11 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c32); }
                      }
                      if (s11 as any !== peg$FAILED) {
                        s12 = [];
                        s13 = peg$parse_();
                        while (s13 as any !== peg$FAILED) {
                          s12.push(s13);
                          s13 = peg$parse_();
                        }
                        if (s12 as any !== peg$FAILED) {
                          s13 = peg$parseValue();
                          if (s13 as any !== peg$FAILED) {
                            s9 = [s9, s10, s11, s12, s13];
                            s8 = s9;
                          } else {
                            peg$currPos = s8;
                            s8 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s8;
                          s8 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s8;
                        s8 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s8;
                      s8 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s8;
                    s8 = peg$FAILED;
                  }
                  if (s8 as any !== peg$FAILED) {
                    s9 = [];
                    s10 = peg$parse_();
                    while (s10 as any !== peg$FAILED) {
                      s9.push(s10);
                      s10 = peg$parse_();
                    }
                    if (s9 as any !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 41) {
                        s10 = peg$c7;
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c8); }
                      }
                      if (s10 as any !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c33(s1, s3, s8);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 as any === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c26); }
    }

    return s0;
  }

  function peg$parseAny(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;
